@@ -1,3 +1,7 @@
+Fri Oct  8 17:53:30 CEST 2004 (tk)
+----------------------------------
+  * clamd/others.c: improve poll code in is_fd_connected() (Trog)
+
 Thu Oct  7 16:37:04 BST 2004 (njh)
 ----------------------------------
   * clamav-milter:	Requirement for ScanMail removed since that is no
